--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9"
+  }
 }
